# 129-mediation-analysis-finance

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
examples/: crypto_mediation_example.py  stock_mediation_example.py
python/: __init__.py  data.py  model.py  requirements.txt  strategy.py
rust/: Cargo.toml
rust/examples/: basic_mediation.rs
rust/src/: lib.rs
